Admin Projects/University/force-app/main/default/objects/Instructor__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Enter your email in the form of xyz@companyName.com</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>