Admin Projects/University/force-app/main/default/objects/Instructor__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Enter your 10 digit contact number.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>