Admin Projects/University/force-app/main/default/objects/Instructor__c/validationRules/Instructor_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Instructor_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>Rating__c &gt; 5</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Enter Rating between 1 to 5.</errorMessage>
</ValidationRule>