Admin Projects/University/force-app/main/default/objects/Instructor__c/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Phone__c) &lt;&gt; 10</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please enter a valid 10-digit phone number.</errorMessage>
</ValidationRule>